# term-basics-linux

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bin.rs  lib.rs
term-basics-linux/: Cargo.toml
term-basics-linux/src/: bin.rs  lib.rs
