[package]
name = "term-basics-linux"
version = "0.5.8"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2018"
description = "A simple crate with basic functionality for terminal applications."
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/codybloemhard/term-basics-linux"
keywords = ["text","linux","terminal","io","unicode"]
categories = ["command-line-interface"]

[lib]
name = "term_basics_linux"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
termios = "0.3.1"
num-traits = "0.2"
num-derive = "0.2"
