[package]
name = "term-basics-linux"
version = "1.0.1"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
description = "A simple crate with basic functionality for terminal applications."
license = "MIT"
readme = "README.md"
repository = "https://github.com/codybloemhard/term-basics-linux"
keywords = ["text", "linux", "terminal", "io"]
categories = ["command-line-interface"]

[lib]
name = "term_basics_linux"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
termios = "0.3.3"
num-traits = "0.2.19"
num-derive = "0.4.2"
