[package]
name = "term-basics-linux"
version = "0.1.0"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2018"
description = "A simple crate with basic functionality for terminal applications."
license = "MIT"

[lib]
name = "term_basics_linux"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
termios = "0.3.1"
num-traits = "0.2"
num-derive = "0.2"